// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Context Box should render Default 1`] = `
<DocumentFragment>
  <aside
    class="emotion-0 emotion-1"
  >
    <svg
      class="emotion-2 emotion-3"
      fill="currentColor"
      height="36"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="36"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 7h2v2h-2V7zm0 4h2v6h-2v-6zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
      />
    </svg>
    <div
      class="emotion-4 emotion-5"
    >
      Break block test
    </div>
    <div
      class="emotion-6 emotion-7"
    />
    <div
      class="emotion-8 emotion-9"
    >
      <div
        class="emotion-10 emotion-11"
      >
        <div
          class="emotion-12 emotion-13"
        >
          <div
            data-gramm="false"
            data-slate-editor="true"
            data-slate-node="value"
            style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-14"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
                </span>
              </span>
            </p>
            <h4
              class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-15"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
                </span>
              </span>
            </h4>
            <h4
              class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-15"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-length="0"
                  data-slate-zero-width="n"
                >
                  ﻿
                  <br />
                </span>
              </span>
            </h4>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-14"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <em
                  data-slate-leaf="true"
                >
                  <strong
                    data-slate-leaf="true"
                  >
                    <span
                      data-slate-string="true"
                    >
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                    </span>
                  </strong>
                </em>
              </span>
              <span
                data-slate-node="text"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Lorem ipsum dolor sit amet, consectetur adipiscing elit
                  </span>
                </em>
              </span>
              <span
                data-slate-node="text"
              >
                <u
                  data-slate-leaf="true"
                >
                  <em
                    data-slate-leaf="true"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                    </span>
                  </em>
                </u>
              </span>
            </p>
          </div>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary emotion-18"
        tabindex="0"
        type="button"
      >
        Alles lesen
        <span
          class="MuiTouchRipple-root emotion-19"
        />
      </button>
    </div>
  </aside>
</DocumentFragment>
`;

exports[`Context Box should render WithClassName 1`] = `
<DocumentFragment>
  <aside
    class="extra-classname emotion-0 emotion-1"
  >
    <svg
      class="emotion-2 emotion-3"
      fill="currentColor"
      height="36"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="36"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 7h2v2h-2V7zm0 4h2v6h-2v-6zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
      />
    </svg>
    <div
      class="emotion-4 emotion-5"
    >
      Break block test
    </div>
    <div
      class="emotion-6 emotion-7"
    />
    <div
      class="emotion-8 emotion-9"
    >
      <div
        class="emotion-10 emotion-11"
      >
        <div
          class="emotion-12 emotion-13"
        >
          <div
            data-gramm="false"
            data-slate-editor="true"
            data-slate-node="value"
            style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-14"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
                </span>
              </span>
            </p>
            <h4
              class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-15"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
                </span>
              </span>
            </h4>
            <h4
              class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-15"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-length="0"
                  data-slate-zero-width="n"
                >
                  ﻿
                  <br />
                </span>
              </span>
            </h4>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-14"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <em
                  data-slate-leaf="true"
                >
                  <strong
                    data-slate-leaf="true"
                  >
                    <span
                      data-slate-string="true"
                    >
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                    </span>
                  </strong>
                </em>
              </span>
              <span
                data-slate-node="text"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Lorem ipsum dolor sit amet, consectetur adipiscing elit
                  </span>
                </em>
              </span>
              <span
                data-slate-node="text"
              >
                <u
                  data-slate-leaf="true"
                >
                  <em
                    data-slate-leaf="true"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                    </span>
                  </em>
                </u>
              </span>
            </p>
          </div>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary emotion-18"
        tabindex="0"
        type="button"
      >
        Alles lesen
        <span
          class="MuiTouchRipple-root emotion-19"
        />
      </button>
    </div>
  </aside>
</DocumentFragment>
`;

exports[`Context Box should render WithEmotion 1`] = `
<DocumentFragment>
  <aside
    class="emotion-0 emotion-1"
  >
    <svg
      class="emotion-2 emotion-3"
      fill="currentColor"
      height="36"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="36"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 7h2v2h-2V7zm0 4h2v6h-2v-6zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
      />
    </svg>
    <div
      class="emotion-4 emotion-5"
    >
      Break block test
    </div>
    <div
      class="emotion-6 emotion-7"
    />
    <div
      class="emotion-8 emotion-9"
    >
      <div
        class="emotion-10 emotion-11"
      >
        <div
          class="emotion-12 emotion-13"
        >
          <div
            data-gramm="false"
            data-slate-editor="true"
            data-slate-node="value"
            style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-14"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
                </span>
              </span>
            </p>
            <h4
              class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-15"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-string="true"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit
                </span>
              </span>
            </h4>
            <h4
              class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-15"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <span
                  data-slate-length="0"
                  data-slate-zero-width="n"
                >
                  ﻿
                  <br />
                </span>
              </span>
            </h4>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-14"
              data-slate-node="element"
            >
              <span
                data-slate-node="text"
              >
                <em
                  data-slate-leaf="true"
                >
                  <strong
                    data-slate-leaf="true"
                  >
                    <span
                      data-slate-string="true"
                    >
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                    </span>
                  </strong>
                </em>
              </span>
              <span
                data-slate-node="text"
              >
                <em
                  data-slate-leaf="true"
                >
                  <span
                    data-slate-string="true"
                  >
                    Lorem ipsum dolor sit amet, consectetur adipiscing elit
                  </span>
                </em>
              </span>
              <span
                data-slate-node="text"
              >
                <u
                  data-slate-leaf="true"
                >
                  <em
                    data-slate-leaf="true"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                    </span>
                  </em>
                </u>
              </span>
            </p>
          </div>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary emotion-18"
        tabindex="0"
        type="button"
      >
        Alles lesen
        <span
          class="MuiTouchRipple-root emotion-19"
        />
      </button>
    </div>
  </aside>
</DocumentFragment>
`;
